Type-checking:
- Allow polymorphic generalization of covariant parts of expansive expressions

Both compilers:
- The sources for a module, say "Mod", can be placed either in Mod.ml or
  in mod.ml.
- Compilation of "let rec" on non-functional values: tightened some checks,
  relaxed some other checks.
- Fixed wrong code that was generated for "for i = a to max_int"
  or "for i = a downto min_int".

Native-code compiler:
- Fixed bug in ocamlopt -pack related to tracking of imported modules.
- x86 port:
    Added -ffast-math option to use inline trigo and log functions.
    Small performance enhancements on float arithmetic.
    Fixed illegal "imul" instruction generated by reloading phase.
- Sparc port:
    Enhanced code generation for Sparc V8 (option -march=v8) and 
    Sparc V9 (option -march=v9).

Toplevel interactive system:
- Tightened interface consistency checks between .cmi files, .cm[oa] files
  loaded by #load, and the running toplevel.
- #trace on mutually-recursive functions was broken, works again.

Libraries:
- Match_failure and Assert_failure exceptions now report
  (file, line, column), instead of (file, starting char, ending char).
- Module Arg: added Set_*, Symbol.
- Module Scanf: %n and %N formats to count characters / items read so far;
    assorted bug fixes.

Runtime system:
- output_value/input_value: fixed bug with large blocks (>= 4 Mwords)
  output on a 64-bit platform and incorrectly read back on a 32-bit
  platform.

The Dynlink library:
- By default, dynamically-loaded code now has access to all
  modules defined by the program; new functions Dynlink.allow_only
  and Dynlink.prohibit for access control.
- Fixed Dynlink problem with files generated with ocamlc -pack.

The Str library:
- Reimplemented regexp matching engine, now less buggy, faster, and LGPL
  instead of GPL.


Objective Caml 3.06:
--------------------

Type-checking:
- Apply value restriction to polymorphic record fields.

Run-time system: