@@ -22,6 +22,10 @@ val transl_implementation: string -> structure * module_coercion -> lambda
 val transl_store_implementation:
       string -> structure * module_coercion -> int * lambda
 val transl_toplevel_definition: structure -> lambda
+val transl_package: Ident.t list -> Ident.t -> module_coercion -> lambda
+val transl_store_package:
+      Ident.t list -> Ident.t -> module_coercion -> int * lambda
+
 val toplevel_name: Ident.t -> string
 
 val primitive_declarations: string list ref
